# maiya

./: .chat_history  .gitignore  README.md  add-to-claude.py  chat.py  claude_project_id.txt  get-notion-database.py  maia-cli.sh  maia-cmd.sh  project-instructions.md  prompt.md  pyproject.toml  requirements.txt  setup.py
Research/: journal-database-object.txt  notion-query-w-filters.txt
maia/: __init__.py  __main__.py  cli.py
maia/chat/: __init__.py  interface.py
maia/html/: __init__.py  converter.py
maia/markdown/: converter.py
maia/notion/: client.py  pages.py
maia/storage/: files.py
maia/utils/: config.py
maia/webflow/: __init__.py  client.py  sync.py
newsletter-references/: newsletter-template-populator.js
notion-pages/: 2025-03-25-0844-15 1c1d1339-6967-808d-8180-c7841f9fe4ca.md  2025-03-26-0040-56 1c2d1339-6967-8007-a22b-c2d344dbaa42.md  2025-03-27-0909-12 1c3d1339-6967-8030-ab7b-dea05816efc1.md
scripts/: maia
tests/: test_config.py
